--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@ body{
     max-width: 100%;
     background: linear-gradient(to right, #00FFCC,rgb(198, 55, 255));
 }
-.div{
+#info{
     text-align: center;
     justify-content: center;
     align-items: center;
     font-size: 20px;
     font-family: courier, sans-serif;
     text-transform: capitalize;
-    width: 60%;
+    width: 80%;
     max-width: 300px;
     background-color: rgba(194, 194, 194, 0.193);
     border-radius: 5px;
@@ -20,13 +20,14 @@ body{
     font-family: 'Courier New', Courier, monospace, serif;
     margin-bottom: 0;
     margin-top: 10px;
+    font-size: 20px;
 }
 #scale{
     max-width: 300px;
-    width: 61%;
+    width: 81%;
     outline: none;
     border: 2px solid black;
-    height: 34px;
+    height: 35px;
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 15px;
@@ -36,10 +37,10 @@ body{
 #input{
     justify-content: center;
     align-items: center;
-    width: 60%;
+    width: 80%;
     max-width: 300px;
     height: 30%;
-    max-height: 30px;
+    max-height: 50px;
     outline: none;
     border: 2px solid black;
     font-family: courier;
@@ -50,7 +51,7 @@ button{
     border: 2px solid black;
     border-radius: 5px;
     padding: 7px;
-    width: 60%;
+    width: 80%;
     max-width: 300px;
     color: black;
     font-size: 16px;
@@ -67,7 +68,6 @@ button:hover{
 }
 .container{
     height: 100vh;
-    margin: 100px;
     margin-top: 0;
     padding: 20px;
     display: flex;
